--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,10 @@ sqlalchemy
 pydantic
 jinja2
 python-dotenv
+psycopg2-binary
+
+
+google-auth
+google-auth-oauthlib
+google-api-python-client
+apscheduler
