--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+# FastAPI
 fastapi
 uvicorn
 sqlalchemy
@@ -6,8 +7,12 @@ jinja2
 python-dotenv
 psycopg2-binary
 
-
+# Google API
 google-auth
 google-auth-oauthlib
 google-api-python-client
 apscheduler
+
+# Microsoft API
+msal
+requests
